tests/baselines/reference/validRegexp.errors.txt
validRegexp.ts(1,24): error TS1005: ',' expected.


==== validRegexp.ts (1 errors) ====
    var x = / [a - z /]$ / i;
                           ~
!!! error TS1005: ',' expected.
    var x1 = /[a-z/]$/i;
    var x2 = /[a-z/]$ /i;